--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -11,6 +11,7 @@
 
 html {
   font-size: 62.5%;
+  scroll-padding-top: 10rem;
   scroll-behavior: smooth;
 }
 
@@ -44,7 +45,8 @@ a:hover {
   color: hsla(277, 100%, 51%, 1);
 }
 
-.bg-button {
+.bg-button,
+input#submit {
   font-weight: 700;
   display: inline-block;
   padding: 1.5rem 3rem;
@@ -59,7 +61,9 @@ a:hover {
   transition: all 0.3s;
 }
 
+input#submit:hover,
 .bg-button:hover {
+  cursor: pointer;
   color: hsla(0, 0%, 100%, 1);
   filter: hue-rotate(-10deg);
 }
@@ -83,10 +87,15 @@ section header h2 {
 /*? || Header */
 
 #header {
+  top: 0;
   height: 10rem;
+  position: sticky;
   display: flex;
   align-items: center;
   font-weight: bold;
+  z-index: 100;
+  border: 1px solid hsla(0, 0%, 59%, 0.15);
+  background: hsla(0, 0%, 100%, 1);
   justify-content: space-between;
 }
 
@@ -119,7 +128,6 @@ section header h2 {
 #banner h1 {
   font-size: 6rem;
   max-width: 53rem;
-  font-weight: 700;
   margin-bottom: 2rem;
 }
 
@@ -246,8 +254,9 @@ section header h2 {
 /*? || Courses */
 
 #courses {
-  margin-top: 15rem;
+  padding-top: 15rem;
   position: relative;
+  overflow-x: hidden;
 }
 
 #courses::before {
@@ -257,7 +266,7 @@ section header h2 {
   height: 38.2rem;
   clip-path: circle();
   z-index: -1;
-  top: 0;
+  top: 15rem;
   right: -24.8rem;
   background: linear-gradient(
     35.71deg,
@@ -458,8 +467,10 @@ section header h2 {
   color: hsla(0, 0%, 100%, 1);
 }
 
+/*? || Faq */
+
 #faq {
-  margin-top: 15rem;
+  padding-top: 15rem;
 }
 
 #faq header h2 {
@@ -470,7 +481,7 @@ section header h2 {
   display: grid;
   gap: 2rem;
   max-width: 85rem;
-  margin: 0 auto 12rem;
+  margin: 0 auto 10rem;
 }
 .faq details {
   padding: 4rem;
@@ -540,6 +551,40 @@ section header h2 {
   color: hsla(219, 15%, 36%, 1);
 }
 
+/*? || Get Started */
+
+#get-started {
+  padding-top: 2rem;
+  position: relative;
+  overflow-x: hidden;
+}
+
+#get-started::before {
+  content: '';
+  position: absolute;
+  width: 35.5rem;
+  height: 35.5rem;
+  clip-path: circle();
+  z-index: -1;
+  top: 0;
+  right: -20.1rem;
+  background: linear-gradient(
+    44.11deg,
+    hsla(288, 100%, 53%, 1) 15.75%,
+    hsla(277, 100%, 51%, 1) 84.63%
+  );
+}
+#get-started::after {
+  content: '';
+  position: absolute;
+  width: 12.3rem;
+  height: 12.3rem;
+  clip-path: circle();
+  z-index: 0;
+  top: 0;
+  right: 3.1rem;
+  background: linear-gradient(35.71deg, #ffd7a9 9.11%, #ffae70 71.64%);
+}
 #get-started .promo {
   border-radius: 3.3rem;
   padding: 0.8rem 3.4rem;
@@ -582,10 +627,76 @@ section header h2 {
   margin-bottom: 12rem;
 }
 
+/*? || Footer */
+
 footer {
-  background: linear-gradient(44.11deg, #cd10ff 15.75%, #9f06ff 84.63%);
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+  background: linear-gradient(
+    44.11deg,
+    hsla(288, 100%, 53%, 0.2) 15.75%,
+    hsla(277, 100%, 51%, 0.2) 84.63%
+  );
 }
 
+footer header {
+  margin-bottom: 5rem;
+  gap: 8rem;
+}
+
+footer header img {
+  height: 3rem;
+}
+
+footer header,
+#form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#form {
+  flex: 1;
+  height: 6.6rem;
+  padding-left: 4rem;
+  padding-right: 0.8rem;
+  max-width: 89rem;
+  border-radius: 3.3rem;
+  background-color: hsla(0, 0%, 100%, 1);
+  box-shadow: 0 0.8rem 1.6rem 0 hsla(0, 0%, 0%, 0.05);
+}
+
+#form input {
+  border: 0;
+  outline: 0;
+  font-family: 'Mulish';
+}
+
+#form input#email {
+  width: 60%;
+  font-size: 1.6rem;
+}
+
+#form input#submit {
+  height: 76%;
+  font-weight: bold;
+  padding: 1.5rem 3rem;
+  border-radius: 3.3rem;
+  color: hsla(0, 0%, 100%, 1);
+}
+
+footer nav {
+  display: flex;
+  gap: 10rem;
+}
+
+footer nav ul:first-child {
+  column-count: 2;
+}
+footer nav li {
+  padding-top: 2rem;
+}
+
+/*? || Media */
 @media screen and (min-width: 1490px) {
   .video-container {
     right: 16rem;
@@ -596,4 +707,7 @@ footer {
     right: 16rem;
     border-radius: 2rem;
   }
+}
+
+@media screen and (max-width: 1320px) {
 }
